// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should trigger a remove action 1`] = `
Object {
  "payload": "remove",
  "type": "@@krf/REMOVE>TESTPREFIX>TESTNAME",
}
`;

exports[`actions should trigger a reset action 1`] = `
Object {
  "type": "@@krf/RESET>TESTPREFIX>TESTNAME",
}
`;

exports[`actions should trigger a set action 1`] = `
Object {
  "payload": Array [
    Object {
      "an": "element_set1",
      "code": "set1",
    },
    Object {
      "an": "element_set2",
      "code": "set2",
    },
  ],
  "type": "@@krf/SET>TESTPREFIX>TESTNAME",
}
`;

exports[`actions should trigger an add action 1`] = `
Object {
  "payload": Object {
    "an": "element_add",
    "code": "add",
  },
  "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
}
`;

exports[`actions should trigger an addOrUpdate action 1`] = `
Object {
  "payload": Object {
    "an": "element_add",
    "code": "add",
  },
  "type": "@@krf/ADD_OR_UPDATE>TESTPREFIX>TESTNAME",
}
`;

exports[`actions should trigger an replace action 1`] = `
Object {
  "payload": Object {
    "an": "element_replace",
    "code": "replace",
  },
  "type": "@@krf/REPLACE>TESTPREFIX>TESTNAME",
}
`;
